--- a/bookrecommend/pom.xml
+++ b/bookrecommend/pom.xml
@@ -28,6 +28,25 @@
     </dependency>
     <dependency>
       <groupId>org.apache.mahout</groupId>
+      <artifactId>mahout-integration</artifactId>
+      <version>0.13.0</version>
+      <exclusions>
+        <exclusion>
+          <groupId>org.mortbay.jetty</groupId>
+          <artifactId>jetty</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.apache.cassandra</groupId>
+          <artifactId>cassandra-all</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>me.prettyprint</groupId>
+          <artifactId>hector-core</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.mahout</groupId>
       <artifactId>mahout-core</artifactId>
       <version>0.9</version>
     </dependency>
